# auto-healing-devops-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: auto-heal.yml
architecture/: arc42-architecture.md  c4-diagrams.md
demo/: advanced_bugs.py  advanced_bugs_2.py  advanced_bugs_3.py  advanced_bugs_4.py  buggy_calculator.py  test_advanced_bugs.py  test_advanced_bugs_2.py  test_advanced_bugs_3.py  test_buggy_calculator.py
docs/: GUIDE.md
docs/thesis/: references.bib
scripts/: demo.py
src/gerrit_mcp/: __init__.py  code_fetcher.py  gerrit_helpers.py  github_approver.py  patch_submitter.py  pr_body_builder.py  pr_bug_table.py  report_builder.py  server.py
src/jenkins_mcp/: __init__.py  log_fetcher.py  nim_client.py  server.py  tools.py  webhook_handler.py
src/knowledge_graph_mcp/: __init__.py  dependency_tracker.py  failure_analyser.py  server.py  tools.py
src/llm_mcp/: __init__.py  autoheal_parser.py  bug_scanner.py  fix_code_handler.py  fix_exceptions.py  fix_generator.py  fix_parsers.py  fix_prompt_builder.py  fix_prompts.py  fix_validators.py  prompt_templates.py  quality_check.py  server.py  summary_writer.py  tools.py
src/log_cleaner_mcp/: __init__.py  pipeline.py  server.py  tools.py
src/notification_mcp/: __init__.py  server.py  slack_notifier.py  slack_slash_handler.py  slash_responses.py  teams_notifier.py  tools.py  traffic_light_evaluator.py
src/orchestrator_mcp/: __init__.py  admin_mixin.py  deduplication.py  github_mixin.py  pipeline_entry.py  pipeline_finalise.py  pipeline_helpers.py  pipeline_mixin.py  pipeline_steps.py  rate_limiter.py  scenario_router.py  server.py  slack_mixin.py  tools.py  traffic_light.py  workflow.py  workflow_api_mixin.py
src/scheduler/: __init__.py  daily_digest.py  monitor.py  task_classifier.py
src/shared/: __init__.py  adaptive_thresholds.py  architecture_classifier.py  audit_log.py  config.py  cost_tracker.py  diff_generator.py  fix_memory.py  heal_verifier.py  health_check.py  logging_setup.py  (+12 more)
tests/: conftest.py
(+91 files in other folders)
